fixe the waves background  distortion

--- a/css/style.css
+++ b/css/style.css
@@ -491,11 +491,13 @@ footer p {
 
     .bg-wave-section1-top {
         background: url(../images/bg-section-top-mobile-1.svg) no-repeat;
+        background-size: cover;
         height: 13rem;
     }
 
     .bg-wave-section1-bottom {
         background: url(../images/bg-section-bottom-mobile-1.svg) no-repeat;
+        background-size: cover;
         height: 10rem;
         margin-bottom: 0rem;
     }
@@ -508,6 +510,7 @@ footer p {
 
     .bg-wave-section3-bottom {
         background: url(../images/bg-section-bottom-mobile-2.svg) no-repeat;
+        background-size: cover;
         height: 13rem;
     }
 
@@ -624,10 +627,12 @@ footer p {
 
 @media (max-width:400px) {
     .bg-wave-section3-top, .bg-wave-section3-bottom {
+        background-size: cover;
     height: 10rem;
     }
     
     .bg-wave-footer {
+        background-size: cover;
     height: 2.6rem
     }
 }
